# h264-h265-to-jpeg

./: CMakeLists.txt  README.md  main.cpp
export_inc/: IDecoder.h
inc/: H265ToJpeg.h
inc/jni/: com_autonavi_decode_H265ToJpeg.h
inc/x86_64/libavutil/: ffversion.h
lib/: libavfilter.7.85.100.dylib  libpostproc.55.7.100.dylib
lib/ffmpeg/mac_shared/: libavdevice.58.10.100.dylib  libswresample.3.7.100.dylib
lib/ffmpeg/x86_64_shared/: libavcodec.so.58  libavfilter.so.7.96.100  libavutil.so.56  libpostproc.so.55.8.100  libswresample.so.3.8.100  libswscale.so.5.8.100
lib/mac/: libavutil.56.51.100.dylib  libswscale.5.7.100.dylib
lib/x86_64/: libpostproc.so.55.8.100  libswresample.so.3.8.100  libswscale.so.5
src/: Common.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  H265ToJpeg.c  com_autonavi_decode_H265ToJpeg.cpp  com_autonavi_socol_occtiltedserver_service_H265DecodeService.cpp
src/ffmpeg/: README.md
src/jni/: com_autonavi_socol_occtiltedserver_service_H265DecodeService.cpp  com_autonavi_socol_occtiltedserver_service_H265DecodeService.h
test/: H265ToJpeg.java  Test.java
test/com/autonavi/decode/: H265ToJpeg.java
test/com/autonavi/socol/occtiltedserver/service/: H265DecodeService.java  Test.java
test/img/: img02.h265  test.h264
